docs/7.1/api/inappmessaging/com.rakuten.tech.mobile.inappmessaging.runtime.data.enums/-value-type/index.md
//[inappmessaging](../../../index.md)/[com.rakuten.tech.mobile.inappmessaging.runtime.data.enums](../index.md)/[ValueType](index.md)

# ValueType

[androidJvm]\
enum [ValueType](index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[ValueType](index.md)&gt; 

Data value's type supported by InAppMessaging's custom events.

## Parameters

androidJvm

| | |
|---|---|
| typeId | Value type id. |

## Entries

| | |
|---|---|
| [TIME_IN_MILLI](-t-i-m-e_-i-n_-m-i-l-l-i/index.md) | [androidJvm]<br>[TIME_IN_MILLI](-t-i-m-e_-i-n_-m-i-l-l-i/index.md)(5) |
| [BOOLEAN](-b-o-o-l-e-a-n/index.md) | [androidJvm]<br>[BOOLEAN](-b-o-o-l-e-a-n/index.md)(4) |
| [DOUBLE](-d-o-u-b-l-e/index.md) | [androidJvm]<br>[DOUBLE](-d-o-u-b-l-e/index.md)(3) |
| [INTEGER](-i-n-t-e-g-e-r/index.md) | [androidJvm]<br>[INTEGER](-i-n-t-e-g-e-r/index.md)(2) |
| [STRING](-s-t-r-i-n-g/index.md) | [androidJvm]<br>[STRING](-s-t-r-i-n-g/index.md)(1) |
| [INVALID](-i-n-v-a-l-i-d/index.md) | [androidJvm]<br>[INVALID](-i-n-v-a-l-i-d/index.md)(0) |

## Types

| Name | Summary |
|---|---|
| [Companion](-companion/index.md) | [androidJvm]<br>object [Companion](-companion/index.md) |

## Properties

| Name | Summary |
|---|---|
| [name](-i-n-v-a-l-i-d/index.md#-372974862%2FProperties%2F-93201661) | [androidJvm]<br>val [name](-i-n-v-a-l-i-d/index.md#-372974862%2FProperties%2F-93201661): [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html) |
| [ordinal](-i-n-v-a-l-i-d/index.md#-739389684%2FProperties%2F-93201661) | [androidJvm]<br>val [ordinal](-i-n-v-a-l-i-d/index.md#-739389684%2FProperties%2F-93201661): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html) |
| [typeId](type-id.md) | [androidJvm]<br>val [typeId](type-id.md): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html) |
