docs/7.6/api/inappmessaging/com.rakuten.tech.mobile.inappmessaging.runtime.data.enums/-value-type/index.md
//[inappmessaging](../../../index.md)/[com.rakuten.tech.mobile.inappmessaging.runtime.data.enums](../index.md)/[ValueType](index.md)

# ValueType

[androidJvm]\
enum [ValueType](index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[ValueType](index.md)&gt; 

Data value's type supported by InAppMessaging's custom events.

## Entries

| | |
|---|---|
| [INVALID](-i-n-v-a-l-i-d/index.md) | [androidJvm]<br>[INVALID](-i-n-v-a-l-i-d/index.md) |
| [STRING](-s-t-r-i-n-g/index.md) | [androidJvm]<br>[STRING](-s-t-r-i-n-g/index.md) |
| [INTEGER](-i-n-t-e-g-e-r/index.md) | [androidJvm]<br>[INTEGER](-i-n-t-e-g-e-r/index.md) |
| [DOUBLE](-d-o-u-b-l-e/index.md) | [androidJvm]<br>[DOUBLE](-d-o-u-b-l-e/index.md) |
| [BOOLEAN](-b-o-o-l-e-a-n/index.md) | [androidJvm]<br>[BOOLEAN](-b-o-o-l-e-a-n/index.md) |
| [TIME_IN_MILLI](-t-i-m-e_-i-n_-m-i-l-l-i/index.md) | [androidJvm]<br>[TIME_IN_MILLI](-t-i-m-e_-i-n_-m-i-l-l-i/index.md) |

## Types

| Name | Summary |
|---|---|
| [Companion](-companion/index.md) | [androidJvm]<br>object [Companion](-companion/index.md) |

## Functions

| Name | Summary |
|---|---|
| [valueOf](value-of.md) | [androidJvm]<br>fun [valueOf](value-of.md)(value: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)): [ValueType](index.md)<br>Returns the enum constant of this type with the specified name. The string must match exactly an identifier used to declare an enum constant in this type. (Extraneous whitespace characters are not permitted.) |
| [values](values.md) | [androidJvm]<br>fun [values](values.md)(): [Array](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)&lt;[ValueType](index.md)&gt;<br>Returns an array containing the constants of this enum type, in the order they're declared. |

## Properties

| Name | Summary |
|---|---|
| [name](-t-i-m-e_-i-n_-m-i-l-l-i/index.md#-372974862%2FProperties%2F-93201661) | [androidJvm]<br>val [name](-t-i-m-e_-i-n_-m-i-l-l-i/index.md#-372974862%2FProperties%2F-93201661): [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html) |
| [ordinal](-t-i-m-e_-i-n_-m-i-l-l-i/index.md#-739389684%2FProperties%2F-93201661) | [androidJvm]<br>val [ordinal](-t-i-m-e_-i-n_-m-i-l-l-i/index.md#-739389684%2FProperties%2F-93201661): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html) |
| [typeId](type-id.md) | [androidJvm]<br>val [typeId](type-id.md): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html)<br>Value type id. |
